added images and other parts of the assignment

--- a/assignment-1/Assignment 1 - Introduction.ipynb
+++ b/assignment-1/Assignment 1 - Introduction.ipynb
@@ -2,19 +2,115 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
-    "## Question  - Programming problem"
+    "*Author: Jovan Sardinha (jovan.sardinha@gmail.com)*  \n",
+    "*Date: Feb 2, 2017*  \n",
+    "*Stream: Machine Learning*  \n",
+    "*NextAI, 2017 Cohort*  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5 - Programming problem"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Machine Learning and Your Venture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1)  \n",
+    "a) Text in the form of chats from user to bot.  \n",
+    "b) Text in the form of chats from bot to user.  \n",
+    "c) NLP taking into account conversation context.  \n",
+    "d) Use Botkit as bot building framework. Use wit.ai/luis.ai as NLP engine.  \n",
+    "e) Need access to cloud hosts to support bot application \n",
+    "\n",
+    "2)  \n",
+    "a) Intend to use chat data collected through interaction with customers (internal data source).  \n",
+    "b) Intend to use chat data collected through interaction with customers.  \n",
+    "\n",
+    "3)  \n",
+    "a) Training  \n",
+    "__Ashish Malhotra__  \n",
+    "    * Coursera ML course - Andrew Ng 2014  \n",
+    "    * Udacity Deep Learning course - Vincent Vanhoucke, 2015 \n",
+    "__Jovan Sardinha__    \n",
+    "    * Data Science Specialization - Coursera, 2014-2016  \n",
+    "    * Machine Learning - Coursera, 2014  \n",
+    "    * Deep Learning - Udacity, 2015  \n",
+    "    * Operations Research - University of Toronto, 2007-2012   \n",
+    "__Terek Judi__    \n",
+    "    * Pattern Recognition - University of Waterloo, 2013  \n",
+    "    * Applied Linear Models - University of Waterloo, 2011  \n",
+    "    * Sampling and Experimental Design - University of Waterloo, 2011  \n",
+    "    * Statistical Analysis - University of Waterloo, 2011 \n",
+    " b) NLP and NLU  \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Technical Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1: The Field"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) \n",
+    "<img src=\"images/fig-1-4.png\">\n",
+    "\n",
+    "*refrence: Goodfellow, Ian, Yoshua Bengio, and Aaron Courville. Deep learning. Cambridge, MA: The MIT Press, 2016. Print. Fig 1.4*  \n",
+    "\n",
+    "\n",
+    "b) Three reasons that have renewed interest in neural networks are:\n",
+    "1. Increasing dataset size: The growing amount of data captured from human activity makes it easier to train neural networks.  \n",
+    "2. Increasing model size: Computational resources easily available to run much larger models.  \n",
+    "3. Increasing accuracy, complexity and real world impact: Deep learning has consistently been applied with success to a multitude of applications.  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2: Calculus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5: Programming problem"
    ]
   },
   {
