--- a/assignment-1/Assignment 1 - Introduction.ipynb
+++ b/assignment-1/Assignment 1 - Introduction.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "*Author: Jovan Sardinha (jovan.sardinha@gmail.com)*  \n",
     "*Date: Feb 2, 2017*  \n",
@@ -12,21 +15,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Machine Learning and Your Venture"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "1)  \n",
     "a) Text in the form of chats from user to bot.  \n",
@@ -41,41 +53,54 @@
     "\n",
     "3)  \n",
     "a) Training  \n",
-    "__Ashish Malhotra__  \n",
-    "    * Coursera ML course - Andrew Ng 2014  \n",
-    "    * Udacity Deep Learning course - Vincent Vanhoucke, 2015 \n",
-    "__Jovan Sardinha__    \n",
-    "    * Data Science Specialization - Coursera, 2014-2016  \n",
-    "    * Machine Learning - Coursera, 2014  \n",
-    "    * Deep Learning - Udacity, 2015  \n",
-    "    * Operations Research - University of Toronto, 2007-2012   \n",
-    "__Terek Judi__    \n",
-    "    * Pattern Recognition - University of Waterloo, 2013  \n",
-    "    * Applied Linear Models - University of Waterloo, 2011  \n",
-    "    * Sampling and Experimental Design - University of Waterloo, 2011  \n",
-    "    * Statistical Analysis - University of Waterloo, 2011 \n",
-    " b) NLP and NLU  \n",
+    "\n",
+    "**Ashish Malhotra**:    \n",
+    "* Coursera ML course - Andrew Ng 2014  \n",
+    "* Udacity Deep Learning course - Vincent Vanhoucke, 2015   \n",
+    "\n",
+    "**Jovan Sardinha**:     \n",
+    "* Data Science Specialization - Coursera, 2014-2016  \n",
+    "* Machine Learning - Coursera, 2014  \n",
+    "* Deep Learning - Udacity, 2015  \n",
+    "* Operations Research - University of Toronto, 2007-2012   \n",
+    "\n",
+    "**Terek Judi**:    \n",
+    "* Pattern Recognition - University of Waterloo, 2013  \n",
+    "* Applied Linear Models - University of Waterloo, 2011  \n",
+    "* Sampling and Experimental Design - University of Waterloo, 2011  \n",
+    "* Statistical Analysis - University of Waterloo, 2011    \n",
+    "\n",
+    "b) NLP and NLU  \n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Technical Background"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 1: The Field"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "a) \n",
     "<img src=\"images/fig-1-4.png\">\n",
@@ -92,23 +117,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 2: Calculus"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    " $$\\underbrace{ab}  \\frac{a}{b}$$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 5: Programming problem"
    ]
