added link to image for q1a

--- a/assignment-1/Assignment 1 - Introduction.ipynb
+++ b/assignment-1/Assignment 1 - Introduction.ipynb
@@ -7,9 +7,15 @@
     "editable": true
    },
    "source": [
+    "# Assignment 1 - Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Author: Jovan Sardinha (jovan.sardinha@gmail.com)*    \n",
-    "*Stream: Machine Learning*  \n",
-    "*NextAI, 2017 Cohort*  "
+    "*Stream: Machine Learning, NextAI, 2017 Cohort*  "
    ]
   },
   {
@@ -111,8 +117,9 @@
     "editable": true
    },
    "source": [
-    "a) \n",
-    "<img src=\"https://github.com/JovanSardinha/next-ai-ml-assignments/blob/master/assignment-1/images/fig-1-4.png?raw=true\">\n",
+    "a)  \n",
+    "<img src=\"images/fig-1-4.png\">\n",
+    "*Link*: <https://github.com/JovanSardinha/next-ai-ml-assignments/blob/master/assignment-1/images/fig-1-4.png?raw=true\">\n",
     "\n",
     "*refrence: Goodfellow, Ian, Yoshua Bengio, and Aaron Courville. Deep learning. Cambridge, MA: The MIT Press, 2016. Print. Fig 1.4*  \n",
     "\n",
@@ -148,7 +155,7 @@
     "The derivative specifies how to scale a small change in the input to acquire the   corresponding change in the output. While the gradient contains all the partial derivatives of $f$, where element $i$ of the gradient is the partial derivative of $f$ with respect to $x_{i}$.  \n",
     "\n",
     "b)\n",
-    "Most machine learning problems involve minimizing some function $y = f(x)$. Given that the gradient generalizes the notion of a derivative for all variables of $f$, the gradient can be used to minimize the function $f$, because it tell us how to improve $x$ in order to make improvement in $y$."
+    "Most machine learning problems involve minimizing some function $y = f(x)$. Since the gradient generalizes the notion of a derivative for all variables of $f$, the gradient can be used to minimize the function $f$, as it tell us how to  change $x$ in order to make improvement in $y$."
    ]
   },
   {
@@ -174,7 +181,7 @@
     "3 - Full rank covariance matrix: allowing control of variance separately along an arbitrary direction.  \n",
     "\n",
     "b)  \n",
-    "Ideally, we would like the case where our training data size $m$ is significantly larger than the dimensions $n$  of the data. However, it is often the case that $n >> m$. In such cases, it might be difficult to model the data even with a single Gaussian, much less a mixtures of Gaussian. Hence, we do not have sufficient data to fit a full covariance matrix.  Therefore, we usually need to place restrictions on the covariance matrices of Gaussians when modelling data.\n"
+    "Ideally, we would like the case where our training data size $m$ is significantly larger than the dimensions $n$  of the data. However, it is often the case that $n >> m$. In such cases, it might be difficult to model the data even with a single Gaussian, much less a mixtures of Gaussian, making it hard to fit a full covariance matrix. Hence, we usually need to place restrictions on the covariance matrices of Gaussians when modelling data.\n"
    ]
   },
   {
