removed .DS_Store

--- a/assignment-1/Assignment 1 - Introduction.ipynb
+++ b/assignment-1/Assignment 1 - Introduction.ipynb
@@ -251,7 +251,7 @@
     "editable": true
    },
    "source": [
-    "### Part a"
+    "#### Part a"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "editable": true
    },
    "source": [
-    "### part b"
+    "#### part b"
    ]
   },
   {
