--- a/assignment-1/Assignment 1 - Part 1.ipynb
+++ b/assignment-1/Assignment 1 - Part 1.ipynb
@@ -38,7 +38,7 @@
     "editable": true
    },
    "source": [
-    "## Part 1: Machine Learning and Your Venture"
+    "## Machine Learning and Your Venture"
    ]
   },
   {
