--- a/assignment-1/Assignment 1 - Part 1.ipynb
+++ b/assignment-1/Assignment 1 - Part 1.ipynb
@@ -17,7 +17,7 @@
     "editable": true
    },
    "source": [
-    "*Author: Jovan Sardinha, Terek Judi, Ashish Malhotra*    \n",
+    "*Authors: Jovan Sardinha, Terek Judi, Ashish Malhotra*    \n",
     "*Stream: Machine Learning, NextAI, 2017 Cohort*  "
    ]
   },
